[tool.poetry]
name = "hexlet-python-package"
version = "0.3.1"
description = ""
authors = ["skip"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
wemake-python-styleguide = "^0.15.2"

[tool.poetry.scripts]
hexlet-python-package = "hexlet_python_package.scripts.hexlet_python_package:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
